Fix overflow in main view

--- a/app/components/MillieView.css
+++ b/app/components/MillieView.css
@@ -2,6 +2,7 @@
 	display: flex;
     flex-grow: 1;
     flex-direction: column;
+    overflow: auto;
     /* padding-top: 64px; */
 }
 
